--- a/GITHUB.html
+++ b/GITHUB.html
@@ -1,123 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<script src="Js/jquery.js" type="text/javascript"></script>
-	<script src="Js/FuncionesOVI.js" type="text/javascript"></script>
-	<script src="Js/bootstrap.js" type="text/javascript"></script>
-	<script src="Js/bootstrap.min.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="Css/style.css">
-	<link rel="stylesheet" type="text/css" href="Css/styleMenu.css">
-	<link rel="stylesheet" type="text/css" href="Css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
-	<title>Lecturas</title>
-	<link rel="icon" href="img/logo.ico">
-</head>
-<body>
-	<div class="header">
-		<div class="col-lg-12 ContenHeader">
-			<div class="col-lg-4 ContentLogo">
-				<img src="Img/ESCUDO_DE_LA_UNAD.png" > 
-			</div>
-			<div class="col-lg-8 Menu">
-				<ul id="menu">
-					<li><a href="index.html">Inicio</a></li>
-					<li><a href="">Lecturas</a>
-						<ul>
-							<li><a href="GIT.html">GIT</a></li>
-							<li><a href="GITHUB.html">GITHUB</a></li>
-                            <li><a href="GITPages.html">GitHub Pages</a></li>
-						    <li><a href="HTML5.html">HTML5</a></li>
-                            <li><a href="CSS3.html">CSS3</a></li>		
-					    </ul>
-					</li>
-					<li><a href="index.html">Multimedia</a></li>
-					<li><a href="index.html">Actividades</a></li>
-					<li><a href="Autores.html">Autores</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	
-	<!--Esta es la sección para las lecturas-->
-	<div class="container row col-lg-12">
-		<div class="col-lg-12 row subcontainer">
-			<div class="col-lg-12  row">
-				<div class="col-lg-12">
-					<div class="Encabezado col-lg-12 ">
-						<h2>GITHUB</h2>
-					</div>
-				</div>
-				<div class="col-lg-12 row">
-					<div class="col-lg-3 contenedorIMG">
-						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitHub" alt="Responsive image"> 						
-					</div>
-					<div class="col-lg-9">
-						<div class="col-lg-12">
-							<p>
-        	                  El desarrollo de software se vuelve más fácil cuando tiene acceso a las herramientas que necesita para hacer su mejor trabajo. Con flujos de trabajo simples y coherentes, puede reducir la fatiga del cambio de contexto, agilizar los procesos de autenticación y enfocarse en los problemas que realmente importan. Para ayudarlo a obtener una experiencia de desarrollador perfecta, continuamos nuestra asociación con Microsoft para llevar Azure Pipelines a GitHub. Este nuevo servicio CI / CD le permite construir, probar e implementar continuamente en cualquier plataforma, y ​​es gratis para repositorios de código abierto.</p>
-        	                <br><p>
-        	                  Automáticamente active su canalización con cambios en su repositorio cuando conecte Azure Pipelines con GitHub. Obtenga informes de estado completos, código anotado e información detallada, todo dentro de la interfaz de GitHub.
-                            </p></br>
-                            <img src="Img/GitHubInfo1.png" class="img-fluid" alt="Responsive image">
-						</div>
-						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalGitHub">
-		  					Ver mas
-						</button>
-					</div>
-				</div>
-				</div>			
-			</div>
-		</div>
-	</div>
-
-	
-	<footer class="footer font-small mdb-color pt-4">
-		<a href="#" id="toTop" style="display: inline;">
-			<span id="toTopHover" style="opacity: 0;"></span>
-			To Top
-		</a>
-                <img src="Img/LogoUNAD.png" align="left">
+    <head>
+        <meta charset="utf-8">
+            <script src="Js/jquery.js" type="text/javascript"></script>
+            <script src="Js/bootstrap.js" type="text/javascript"></script>
+            <script src="Js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+            <link href="Css/style.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/styleMenu.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
+            <title> Inicio</title>
+            <link href="img/logo.ico" rel="icon"></link>
+        </meta>
+    </head>
+    <body>
+        <div class="header">
+            <div class="col-lg-12 ContenHeader">
+                <div class="col-lg-4 ContentLogo">
+                    <img src="Img/ESCUDO_DE_LA_UNAD.png">
+                    </img>
+                </div>
+                <div class="col-lg-8 Menu">
+                    <ul id="menu">
+                        <li>
+                            <a href="index.html">
+                                Inicio
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                Lecturas
+                            </a>
+                            <ul>
+                                <li>
+                                    <a href="GIT.html">
+                                        GIT
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="GITHUB.html">
+                                        GITHUB
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="GITPages.html">
+                                        GitHub Pages
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="HTML5.html">
+                                        HTML5
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="CSS3.html">
+                                        CSS3
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="Multimedia.html">
+                                Multimedia
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Actividades.html">
+                                Actividades
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Autores.html">
+                                Autores
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--Esta es la sección para las lecturas-->
+        <div class="container row col-lg-12">
+            <div class="col-lg-12 row subcontainer">
+                <div class="col-lg-12 row">
+                    <div class="col-lg-12">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                GITHUB
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 row">
+                        <div class="col-lg-3 contenedorIMG">
+                            <img alt="Responsive image" data-target="#ModalGitHub" data-toggle="modal" src="Img/ColorGitHub.png">
+                            </img>
+                        </div>
+                        <div class="col-lg-9">
+                            <div class="col-lg-12">
+                                <p>
+                                    El desarrollo de software se vuelve más fácil cuando tiene acceso a las herramientas que necesita para hacer su mejor trabajo. Con flujos de trabajo simples y coherentes, puede reducir la fatiga del cambio de contexto, agilizar los procesos de autenticación y enfocarse en los problemas que realmente importan. Para ayudarlo a obtener una experiencia de desarrollador perfecta, continuamos nuestra asociación con Microsoft para llevar Azure Pipelines a GitHub. Este nuevo servicio CI / CD le permite construir, probar e implementar continuamente en cualquier plataforma, y ​​es gratis para repositorios de código abierto.
+                                </p>
+                                <br>
+                                    <p>
+                                        Automáticamente active su canalización con cambios en su repositorio cuando conecte Azure Pipelines con GitHub. Obtenga informes de estado completos, código anotado e información detallada, todo dentro de la interfaz de GitHub.
+                                    </p>
+                                </br>
+                                <img alt="Responsive image" class="img-fluid" src="Img/GitHubInfo1.png">
+                                </img>
+                            </div>
+                            <button class="btn btn-primary" data-target="#ModalGitHub" data-toggle="modal" type="button">
+                                Ver mas
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <!--Footer de la pagina-->
+        <footer class="footer font-small mdb-color pt-4">
+            <a href="#" id="toTop" style="display: inline;">
+                <span id="toTopHover" style="opacity: 0;">
+                </span>
+                To Top
+            </a>
+                <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
                 <div class="footerRedes">
-	            <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6> 
-	            <ul class="social-network social-circle">
-                    <li><a href="https://www.facebook.com/UniversidadUNAD/"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-             	</ul>
-	            </div>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">
+                        Redes
+                    </h6>
+                    <ul class="social-network social-circle">
+                        <li>
+                            <a class="icoFacebook" href="https://www.facebook.com/UniversidadUNAD/" targer="_blank" title="Facebook">
+                                <i class="fa fa-facebook">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="icoLinkedin" href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" title="Linkedin">
+                                <i class="fa fa-linkedin">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="icoInstagram" href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" title="Instagram">
+                                <i class="fa fa-instagram">
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <p>
+                    Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23
+                </p>
+                <p>
+                    Línea nacional gratuita desde Colombia: 018000115223
+                </p>
+                <p>
+                    Atención al usuario: atencionalusuario@unad.edu.co
+                </p>
+                <p>
+                    Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional
+                </p>
+                <p class="text-center text-md-left">
+                    © 2018 Copyright:
+                    <a href="https://www.unad.edu.co/" target="_blank">
+                        <strong>
+                            UNAD
+                        </strong>
+                    </a>
+                </p>
+        </footer>
+    </body>
+</html>
 
-		        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23</p>
-                <p>Línea nacional gratuita desde Colombia: 018000115223</p>
-                <p>Atención al usuario: atencionalusuario@unad.edu.co</p>
-                <p>Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional</p>
-                <p class="text-center text-md-left">© 2018 Copyright:
-		        <a href="https://www.unad.edu.co/" target="_blank">
-		        <strong> UNAD</strong>
-		        </a>
-	         	</p>	    
-  	</footer>
-		
-</body>
 <!-- Incicio modal de github -->
-<div class="modal fade" id="ModalGitHub" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">GITHUB</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
+<div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="ModalGitHub" role="dialog" tabindex="-1">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">
+                    GITHUB
+                </h5>
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">
+                        ×
+                    </span>
+                </button>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-dismiss="modal" type="button">
+                    Close
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <!-- Incicio modal de github -->
-</html>
