--- a/index.html
+++ b/index.html
@@ -1,140 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<script src="Js/jquery.js" type="text/javascript"></script>
-	<script src="Js/bootstrap.js" type="text/javascript"></script>
-	<script src="Js/bootstrap.min.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="Css/style.css">
-	<link rel="stylesheet" type="text/css" href="Css/styleMenu.css">
-	<link rel="stylesheet" type="text/css" href="Css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
-	<title>Inicio</title>
-	<link rel="icon" href="img/logo.ico">
-</head>
-<body>
-
-	<div class="header">
-		<div class="col-lg-12 ContenHeader">
-			<div class="col-lg-4 ContentLogo">
-				<img src="Img/ESCUDO_DE_LA_UNAD.png" > 
-			</div>
-			<div class="col-lg-8 Menu">
-				<ul id="menu">
-					<li><a href="index.html">Inicio</a></li>
-					<li><a href="">Lecturas</a>
-						<ul>
-							<li><a href="GIT.html">GIT</a></li>
-							<li><a href="GITHUB.html">GITHUB</a></li>
-                            <li><a href="GITPages.html">GitHub Pages</a></li>
-						    <li><a href="HTML5.html">HTML5</a></li>
-                            <li><a href="CSS3.html">CSS3</a></li>		
-					    </ul>
-					</li>
-					<li><a href="Multimedia.html">Multimedia</a></li>
-					<li><a href="Actividades.html">Actividades</a></li>
-					<li><a href="Autores.html">Autores</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
- 	<div class="banner img-1 textbanner">      
-    </div>	
-
-    
-
-	<!--Esta es la sección para el Inicio-->
-	<div class="container row col-lg-12">
-		<div class="col-lg-12 row subcontainer">
-			<div class="col-lg-12  row">
-				<div class="col-lg-12">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Información General OVI</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>
-							El OVI trabajado se basa en la utilziación de GIT, GITHUB, HTML 5 y CSS3, en el cual se explica los conceptos sobre estas herramientas.
-						</p>
-					</div>
-				</div>
-				
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Objetivos Ovi</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>
-							1. Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el desarrollo de la página web.
-						</p>
-						<p>
-							2. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender a utilizar bibliotecas externas como lo es Bootstrap y adaptarlo a nuestro HTML.
-						</p>
-						<p>
-							3. Presentar los conceptos básicos de  GIT, GITHUB, HTML 5 y CSS 3.
-						</p>
-						<p>
-							4. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Objetivos Curso</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>
-							5. Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos de diseño web, HTML5 y CSS3 para creación de contenidos en formato web (Paginas y Sitios Web) 
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Tematica del Curso</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>
-							La tematica que se utilizo para el desarrollo de esta actividad fue Diseños de Sitios Web (301122). 
-						</p>
-					</div>
-				</div>				
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Información Adicional</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>Esta es la informacion adicional ingresada por el grupo</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>	
-<!--Footer de la pagina-->	
-	<footer class="footer font-small mdb-color pt-4">
-		<a href="#" id="toTop" style="display: inline;">
-			<span id="toTopHover" style="opacity: 0;"></span>
-			To Top
-		</a>
-                <img src="Img/LogoUNAD.png" align="left">
+    <head>
+        <meta charset="utf-8">
+            <script src="Js/jquery.js" type="text/javascript"></script>
+            <script src="Js/bootstrap.js" type="text/javascript"></script>
+            <script src="Js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+            <link href="Css/style.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/styleMenu.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
+            <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
+            <title> Inicio</title>
+            <link href="img/logo.ico" rel="icon"></link>
+        </meta>
+    </head>
+    <body>
+        <div class="header">
+            <div class="col-lg-12 ContenHeader">
+                <div class="col-lg-4 ContentLogo">
+                    <img src="Img/ESCUDO_DE_LA_UNAD.png">
+                    </img>
+                </div>
+                <div class="col-lg-8 Menu">
+                    <ul id="menu">
+                        <li>
+                            <a href="index.html">
+                                Inicio
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                Lecturas
+                            </a>
+                            <ul>
+                                <li>
+                                    <a href="GIT.html">
+                                        GIT
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="GITHUB.html">
+                                        GITHUB
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="GITPages.html">
+                                        GitHub Pages
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="HTML5.html">
+                                        HTML5
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="CSS3.html">
+                                        CSS3
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="Multimedia.html">
+                                Multimedia
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Actividades.html">
+                                Actividades
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Autores.html">
+                                Autores
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="banner img-1 textbanner">
+        </div>
+        <!--Esta es la sección para el Inicio-->
+        <div class="container row col-lg-12">
+            <div class="col-lg-12 row subcontainer">
+                <div class="col-lg-12 row">
+                    <div class="col-lg-12">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                Información General OVI
+                            </h2>
+                        </div>
+                        <div class="col-lg-12">
+                            <p>
+                                El OVI trabajado se basa en la utilziación de GIT, GITHUB, HTML 5 y CSS3, en el cual se explica los conceptos sobre estas herramientas.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                Objetivos Ovi
+                            </h2>
+                        </div>
+                        <div class="col-lg-12">
+                            <p>
+                                1. Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el desarrollo de la página web.
+                            </p>
+                            <p>
+                                2. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender a utilizar bibliotecas externas como lo es Bootstrap y adaptarlo a nuestro HTML.
+                            </p>
+                            <p>
+                                3. Presentar los conceptos básicos de  GIT, GITHUB, HTML 5 y CSS 3.
+                            </p>
+                            <p>
+                                4. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                Objetivos Curso
+                            </h2>
+                        </div>
+                        <div class="col-lg-12">
+                            <p>
+                                5. Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos de diseño web, HTML5 y CSS3 para creación de contenidos en formato web (Paginas y Sitios Web)
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                Tematica del Curso
+                            </h2>
+                        </div>
+                        <div class="col-lg-12">
+                            <p>
+                                La tematica que se utilizo para el desarrollo de esta actividad fue Diseños de Sitios Web (301122).
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
+                                Información Adicional
+                            </h2>
+                        </div>
+                        <div class="col-lg-12">
+                            <p>
+                                Esta es la informacion adicional ingresada por el grupo
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <!--Footer de la pagina-->
+        <footer class="footer font-small mdb-color pt-4">
+            <a href="#" id="toTop" style="display: inline;">
+                <span id="toTopHover" style="opacity: 0;">
+                </span>
+                To Top
+            </a>
+                <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
                 <div class="footerRedes">
-	            <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6> 
-	            <ul class="social-network social-circle">
-                    <li><a href="https://www.facebook.com/UniversidadUNAD/"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-             	</ul>
-	            </div>
-
-		        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23</p>
-                <p>Línea nacional gratuita desde Colombia: 018000115223</p>
-                <p>Atención al usuario: atencionalusuario@unad.edu.co</p>
-                <p>Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional</p>
-                <p class="text-center text-md-left">© 2018 Copyright:
-		        <a href="https://www.unad.edu.co/" target="_blank">
-		        <strong> UNAD</strong>
-		        </a>
-	         	</p>	    
-  	</footer>
-</body>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">
+                        Redes
+                    </h6>
+                    <ul class="social-network social-circle">
+                        <li>
+                            <a class="icoFacebook" href="https://www.facebook.com/UniversidadUNAD/" targer="_blank" title="Facebook">
+                                <i class="fa fa-facebook">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="icoLinkedin" href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" title="Linkedin">
+                                <i class="fa fa-linkedin">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="icoInstagram" href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" title="Instagram">
+                                <i class="fa fa-instagram">
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <p>
+                    Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23
+                </p>
+                <p>
+                    Línea nacional gratuita desde Colombia: 018000115223
+                </p>
+                <p>
+                    Atención al usuario: atencionalusuario@unad.edu.co
+                </p>
+                <p>
+                    Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional
+                </p>
+                <p class="text-center text-md-left">
+                    © 2018 Copyright:
+                    <a href="https://www.unad.edu.co/" target="_blank">
+                        <strong>
+                            UNAD
+                        </strong>
+                    </a>
+                </p>
+        </footer>
+    </body>
 </html>
